# Efficient_SAM_TensorRT

./: CMakeLists.txt  README.md  main.cpp  onnx2trt.cpp  test.cu
src/: config.h  int8.h  sam.cpp  sam.h
